# googlesql-shim

./: .bazelrc  CONTRIBUTING.md  MODULE.bazel  README.md  create-patches.py  create-patches.sh
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  dco.yml  release.yml  windows-probe.yml
patches/: BUILD.bazel  rules_python-host-preference.patch
patches/googlesql/: pull-1.patch  pull-3.patch  pull-4.patch  pull-5.patch  pull-7.patch
scripts/: build-musl.sh
shim/: BUILD.bazel  link_extras.bzl  numeric_sqrt_oracle.cc  proto_closure.bzl  shim.cc  shim.h  shim_callback_test.cc  smoke_test.cc
wasm/: BUILD.bazel  README.md  smoke.c
