# Bazel module that builds the GoogleSQL C shim smallquery needs, as static
# archives, so that CI can publish prebuilt artifacts and smallquery builds
# can download them instead of running the full Bazel C++ build.
#
# The shim sources under shim/ originate from fornwall/smallquery,
# crates/googlesql-sys/shim (the PR #91 / agent/alwayslink-split state).
#
# Note: //googlesql/local_service is package-private to //googlesql/...,
# so building the shim requires --check_visibility=false (set in .bazelrc).

module(
    name = "googlesql_shim",
    version = "0.1.0",
)

# GoogleSQL itself, pinned to the exact commit of the fornwall/googlesql fork
# (the shim-combined branch, fornwall/googlesql#6: the evaluator split that
# smallquery's vendor/googlesql submodule points at, plus the
# GOOGLESQL_QCHECK_OK/NDEBUG fix from fornwall/googlesql#5 that makes -c opt
# builds fold DATE->DATETIME casts correctly). An override ignores the
# registry, so the version below only has to match the MODULE.bazel inside
# the archive.
bazel_dep(name = "googlesql", version = "2026.7.4")
archive_override(
    module_name = "googlesql",
    integrity = "sha256-lJbHfGVCzteQOll3icZKTzc4ZbB7puKVSriDhdUGmLs=",
    strip_prefix = "googlesql-3de0fa70c44ae9a363269875ada515ab5e2ae57a",
    urls = ["https://github.com/fornwall/googlesql/archive/3de0fa70c44ae9a363269875ada515ab5e2ae57a.tar.gz"],
)

# Only what the shim itself references. protobuf is deliberately not declared:
# it arrives transitively via local_service_cc_proto, and pinning it here just
# creates version conflicts with whatever GoogleSQL resolves to.
bazel_dep(name = "abseil-cpp", version = "20260107.0", repo_name = "com_google_absl")

# The @icu repo's BUILD file select()s on @platforms//os:windows, and a repo
# created by the root module only sees the root's direct deps.
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# Declared directly (same version GoogleSQL resolves to) so the root module
# can reference @rules_python//python/config_settings:py_linux_libc on the
# musl legs' command line. Plus one patch: the
# RULES_PYTHON_REPO_TOOLCHAIN_* host-interpreter override compares the env
# var against (platform, meta) tuples instead of platform names, so it can
# never match. The musl release legs depend on that override to select the
# musl python-build-standalone interpreter (the default candidate order puts
# the glibc build first, which does not run on Alpine); see
# scripts/build-musl.sh.
bazel_dep(name = "rules_python", version = "1.6.1")
single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = ["//patches:rules_python-host-preference.patch"],
    version = "1.6.1",
)

# ICU, built natively by Bazel instead of GoogleSQL's rules_foreign_cc
# (autotools) build: the same icu4c release GoogleSQL pins, under our own
# BUILD file (third_party/icu/icu.BUILD, which also embeds the release's
# prebuilt ICU data statically), swapped into GoogleSQL's extension with
# override_repo below. Autotools was the only configure_make target in the
# graph and the first thing to break on every non-Linux platform. The
# release's own BUILD.bazel files must go, exactly as GoogleSQL's original
# http_archive deleted them: they would become subpackages and hide the
# sources from our globs (patch_cmds_win keeps the deletion working on
# Windows).
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "icu",
    build_file = "//third_party/icu:icu.BUILD",
    patch_cmds = ["find source -name BUILD.bazel -delete"],
    patch_cmds_win = ["Get-ChildItem -Path source -Recurse -Filter BUILD.bazel | Remove-Item"],
    sha256 = "dfacb46bfe4747410472ce3e1144bf28a102feeaa4e3875bac9b4c6cf30f4f3e",
    strip_prefix = "icu",
    urls = ["https://github.com/unicode-org/icu/releases/download/release-76-1/icu4c-76_1-src.tgz"],
)

googlesql_http_archive_deps = use_extension("@googlesql//bazel:http_archive_deps.bzl", "googlesql_http_archive_deps")

override_repo(
    googlesql_http_archive_deps,
    icu = "icu",
)
