# Bazel module that builds the GoogleSQL C shim smallquery needs, as static
# archives, so that CI can publish prebuilt artifacts and smallquery builds
# can download them instead of running the full Bazel C++ build.
#
# The shim sources under shim/ originate from fornwall/smallquery,
# crates/googlesql-sys/shim (the PR #91 / agent/alwayslink-split state).
#
# Note: //googlesql/local_service is package-private to //googlesql/...,
# so building the shim requires --check_visibility=false (set in .bazelrc).

module(
    name = "googlesql_shim",
    version = "0.1.0",
)

# GoogleSQL itself, pinned to an exact upstream google/googlesql commit (the
# tip of its default branch at the time of pinning), with the fixes smallquery
# needs applied on top as patches rather than carried on a fork. An override
# ignores the registry, so the version below only has to match the
# MODULE.bazel inside the archive.
#
# The patches are the open pull requests against fornwall/googlesql, snapshotted
# into patches/googlesql/ by create-patches.py (re-run it to refresh them):
#   pull-1: split the local service's evaluator RPCs into their own cc_library
#           (keeps analysis-only consumers off the reference implementation)
#   pull-3: make base/logging.cc compile without POSIX-only headers (Windows)
#   pull-4: fix RoundUpToNextPowerOfTwo overflow where long is 32-bit (ILP32)
#   pull-5: fix GOOGLESQL_QCHECK_OK compiling out its argument under NDEBUG, so
#           -c opt builds fold DATE->DATETIME casts correctly
# They apply in the order listed. The `patches = [...]` list below is GENERATED
# from create-patches.py's PRS array (Bazel labels cannot glob, and MODULE.bazel
# has no glob(), so it cannot be a wildcard) -- do not edit it by hand; change
# PRS in create-patches.py and re-run the script to regenerate both the files
# and the list.
bazel_dep(name = "googlesql", version = "2026.7.4")
archive_override(
    module_name = "googlesql",
    integrity = "sha256-mOsO2Ou5Ws8AkvlX3iz0zXLgKJBw/dSQx6zNjYSlM1w=",
    patch_strip = 1,
    patches = [
        # BEGIN generated by create-patches.py -- do not edit by hand
        "//patches/googlesql:pull-1.patch",
        "//patches/googlesql:pull-3.patch",
        "//patches/googlesql:pull-4.patch",
        "//patches/googlesql:pull-5.patch",
        "//patches/googlesql:pull-7.patch",
        # END generated by create-patches.py
    ],
    strip_prefix = "googlesql-1f8aa333f4d6353cd3a64471fc83121df72df3f7",
    urls = ["https://github.com/google/googlesql/archive/1f8aa333f4d6353cd3a64471fc83121df72df3f7.tar.gz"],
)

# Only what the shim itself references.
bazel_dep(name = "abseil-cpp", version = "20260107.0", repo_name = "com_google_absl")

# Same version GoogleSQL pins, declared directly so shim/proto_closure.bzl can
# load ProtoInfo from it (Bzlmod resolves to the higher of the two if they
# ever diverge, which is fine -- the rule only reads ProtoInfo's stable API).
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

# The @icu repo's BUILD file select()s on @platforms//os:windows, and a repo
# created by the root module only sees the root's direct deps.
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# Declared directly (same version GoogleSQL resolves to) so the root module
# can reference @rules_python//python/config_settings:py_linux_libc on the
# musl legs' command line. Plus one patch: the
# RULES_PYTHON_REPO_TOOLCHAIN_* host-interpreter override compares the env
# var against (platform, meta) tuples instead of platform names, so it can
# never match. The musl release legs depend on that override to select the
# musl python-build-standalone interpreter (the default candidate order puts
# the glibc build first, which does not run on Alpine); see
# scripts/build-musl.sh.
bazel_dep(name = "rules_python", version = "1.6.1")
single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = ["//patches:rules_python-host-preference.patch"],
    version = "1.6.1",
)

# ICU, built natively by Bazel instead of GoogleSQL's rules_foreign_cc
# (autotools) build: the same icu4c release GoogleSQL pins, under our own
# BUILD file (third_party/icu/icu.BUILD, which also embeds the release's
# prebuilt ICU data statically), swapped into GoogleSQL's extension with
# override_repo below. Autotools was the only configure_make target in the
# graph and the first thing to break on every non-Linux platform. The
# release's own BUILD.bazel files must go, exactly as GoogleSQL's original
# http_archive deleted them: they would become subpackages and hide the
# sources from our globs (patch_cmds_win keeps the deletion working on
# Windows).
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "icu",
    build_file = "//third_party/icu:icu.BUILD",
    patch_cmds = ["find source -name BUILD.bazel -delete"],
    patch_cmds_win = ["Get-ChildItem -Path source -Recurse -Filter BUILD.bazel | Remove-Item"],
    sha256 = "dfacb46bfe4747410472ce3e1144bf28a102feeaa4e3875bac9b4c6cf30f4f3e",
    strip_prefix = "icu",
    urls = ["https://github.com/unicode-org/icu/releases/download/release-76-1/icu4c-76_1-src.tgz"],
)

googlesql_http_archive_deps = use_extension("@googlesql//bazel:http_archive_deps.bzl", "googlesql_http_archive_deps")

override_repo(
    googlesql_http_archive_deps,
    icu = "icu",
)
