# The GoogleSQL C shim and the targets that flatten it, together with its
# whole transitive GoogleSQL closure, into static archives for a non-Bazel
# consumer (smallquery's crates/googlesql-sys, whose build.rs links exactly
# the artifact set `:static` produces).
#
# The sources here originate from fornwall/smallquery,
# crates/googlesql-sys/shim.

load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(":link_extras.bzl", "cc_alwayslink_objects")
load(":proto_closure.bzl", "proto_closure")

cc_library(
    name = "shim_lib",
    srcs = ["shim.cc"],
    hdrs = ["shim.h"],
    # Strict warnings for our one TU, per-target and never in .bazelrc: the
    # global -Wno-* copts there exist to quiet upstream GoogleSQL, which
    # would not survive -Wall. -Werror sits directly in copts (not behind a
    # CI-only define) so local builds fail on warnings exactly like CI; all
    # release toolchains are clang-family, so one switch set serves.
    #
    # The -Wno-* list below silences categories that fire *inside GoogleSQL
    # headers* this TU includes (verified: with these six suppressed, the
    # build is warning-free, i.e. shim.cc itself was clean under
    # -Wall -Wextra). Bazel's external_include_paths feature was tried and
    # does not help: the repo-root -iquote entries for external deps remain
    # on the command line ahead of the -isystem copies, so header warnings
    # still attribute. -Wno-unknown-warning-option keeps older clangs from
    # tripping over the newer categories' names under -Werror.
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-warning-option",
        "-Wno-unused-parameter",
        "-Wno-character-conversion",
        "-Wno-sign-compare",
        "-Wno-implicit-const-int-float-conversion",
        "-Wno-missing-designated-field-initializers",
        "-Wno-ignored-qualifiers",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@googlesql//googlesql/local_service:local_service_analysis",
        "@googlesql//googlesql/local_service:local_service_cc_proto",
        "@googlesql//googlesql/proto:options_cc_proto",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:simple_table_cc_proto",
        "@googlesql//googlesql/public/types:type_factory",
        "@googlesql//googlesql/resolved_ast",
    ],
)

# The behavioral gate every release leg runs in its exact build
# configuration: analyzes a statement whose constant fold once broke under
# `-c opt` (a GOOGLESQL_QCHECK_OK/NDEBUG bug, fixed by
# patches/googlesql/pull-5.patch, fornwall/googlesql#5) and asserts the folded
# literal is the right value.
# A build that computes wrong answers must fail its leg, not ship. See
# smoke_test.cc.
cc_test(
    name = "smoke_test",
    size = "small",
    srcs = ["smoke_test.cc"],
    # Fully static, like the shipped archives -- and necessary: the default
    # dev-mode dynamic link puts the (linkstatic) ICU data archive ahead of
    # the shared libraries whose undefined icudt76_dat would pull its
    # member, so the symbol never resolves.
    linkstatic = True,
    deps = [
        ":shim_lib",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/local_service:local_service_cc_proto",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:options_cc_proto",
        # GoogleSQL compiles against headers-only @icu targets (so the
        # release bundle stays ICU-free); an actual *binary* like this test
        # must therefore link the ICU code and data libraries explicitly.
        "@icu//:icudata_lib",
        "@icu//:icui18n_lib",
        "@icu//:icuio_lib",
        "@icu//:icuuc_lib",
    ],
)

# Sanitizer-facing tests for the callback-catalog entry point, driving the C
# ABI with C++-implemented callbacks standing in for smallquery's Rust side.
# Run under the sanitizer configs in the root .bazelrc:
#   bazel test --config=asan  //shim:shim_callback_test
#   bazel test --config=tsan  //shim:shim_callback_test
#   bazel test --config=ubsan //shim:shim_callback_test
# Also passes (and asserts the buffer alloc/free balance) under the default
# config. `size = "large"`: the multithreaded cases are slow under TSan.
cc_test(
    name = "shim_callback_test",
    size = "large",
    srcs = ["shim_callback_test.cc"],
    # linkstatic + the explicit ICU deps, for the same reasons as smoke_test
    # above: GoogleSQL compiles against headers-only @icu targets, so an
    # actual binary must link the ICU code and data libraries itself.
    linkstatic = True,
    deps = [
        ":shim_lib",
        "@googlesql//googlesql/local_service:local_service_cc_proto",
        "@googlesql//googlesql/proto:options_cc_proto",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_table_cc_proto",
        "@icu//:icudata_lib",
        "@icu//:icui18n_lib",
        "@icu//:icuio_lib",
        "@icu//:icuuc_lib",
    ],
)

# A differential oracle: prints (input, GoogleSQL's NumericValue::Sqrt(input))
# pairs for smallquery's crates/smallquery/tests/numeric_sqrt_differential.rs
# to check its Rust `numeric::sqrt` port against, bit for bit. Not part of the
# shim or its releases; a standalone tool run by hand (`bazel run`) to
# regenerate the test vectors. Depends only on the numeric_value library, but
# needs the explicit ICU deps like every binary target here (see smoke_test).
cc_binary(
    name = "numeric_sqrt_oracle",
    srcs = ["numeric_sqrt_oracle.cc"],
    linkstatic = True,
    deps = [
        "@googlesql//googlesql/public:numeric_value",
        "@icu//:icudata_lib",
        "@icu//:icui18n_lib",
        "@icu//:icuio_lib",
        "@icu//:icuuc_lib",
    ],
)

# Flattens the shim and every transitive dependency into one `.a`.
#
# `symbol_check` is off: it rejects duplicate symbols across the whole closure,
# and GoogleSQL's closure has them (weak/COMDAT definitions repeated across
# archives are normal and the linker picks one).
#
# HAZARD: a `.a` carries no `alwayslink` metadata, so the object from
# `@googlesql//googlesql/public/types:type_with_catalog_impl` (a bare static
# initializer, referenced by nothing) is a member the linker drops -- measured,
# and with no link error. The `:googlesql_shim_alwayslink` side archive below
# carries those objects for the consumer to link with `+whole-archive`;
# smallquery's `googlesql-sys/tests/alwayslink_canary.rs` fails loudly if the
# object ever goes missing from the final binary.
cc_static_library(
    name = "googlesql_shim",
    features = ["-symbol_check"],
    visibility = ["//visibility:public"],
    deps = [":shim_lib"],
)

# The objects of every `alwayslink = 1` target in the closure, as a small
# separate archive that the consumer links with `+whole-archive` -- scoping
# the force-load to the objects that need it instead of the whole bundle. The
# bundle above still contains a duplicate copy of each object; that is
# harmless, because an alwayslink object exports no strong global symbol
# (that is why it needs alwayslink), so the linker never selects the copy.
cc_alwayslink_objects(
    name = "googlesql_shim_alwayslink",
    visibility = ["//visibility:public"],
    deps = [":shim_lib"],
)

# ICU ships as four separate archives beside the bundle, exactly the set the
# old rules_foreign_cc build published -- smallquery's build.rs links every
# lib*.a it finds next to the bundle, so the staged names are the contract.
# They stay out of the bundle by construction: GoogleSQL compiles against
# @icu's headers-only targets, so no ICU object ever enters the shim's
# linking context; the code and data archives are built separately in
# @icu (see third_party/icu/icu.BUILD) and copied into this package so
# every consumer finds the whole set under one directory.
[
    genrule(
        name = "stage_" + lib,
        srcs = ["@icu//:" + lib],
        outs = ["lib" + lib + ".a"],
        cmd = "cp $< $@",
    )
    for lib in [
        "icuuc",
        "icui18n",
        "icuio",
        "icudata",
    ]
]

# The transitive .proto closure of local_service.proto, laid out by import
# path -- what smallquery's build.rs feeds prost. Shipped as `protos/` in
# every release tarball (and as a standalone protos tarball, for consumers
# that need the types but not the archives); see proto_closure.bzl for why
# this cannot be a source checkout (three of the protos are generated).
proto_closure(
    name = "protos",
    proto = "@googlesql//googlesql/local_service:local_service_proto",
    visibility = ["//visibility:public"],
)

# What a release is built from:
#   bazel build -c opt --force_pic //shim:static
# --force_pic matters: without it, `-c opt` makes cc_static_library pack both
# the PIC and non-PIC variants of every object into the bundle, and a consumer
# linking it with --whole-archive fails on the resulting duplicate symbols.
filegroup(
    name = "static",
    srcs = [
        ":googlesql_shim",
        ":googlesql_shim_alwayslink",
        ":stage_icudata",
        ":stage_icui18n",
        ":stage_icuio",
        ":stage_icuuc",
    ],
    visibility = ["//visibility:public"],
)
